@@ -1,5 +1,6 @@
 ﻿l_english:
 #Isildur's mission loc.
+ vn_will_receive_rewards_tt: "Rewards will be shown upon fulfilling the mission conditions."
 #Missions
 #BURGUNDY
  vn_bur_stabilize_duchy_title: "Stabilize the Duchy"
@@ -2804,7 +2805,7 @@
  desc_slo_endless_glory: ""
  slo_silesian_integration_mission: "Silesian Union"
  desc_slo_silesian_integration_mission: ""
- slo_our_namesake_mission: "Prosperity in [Prev.GetName]"
+ slo_our_namesake_mission: "Prosperity in Slovakia"
  desc_slo_our_namesake_mission: ""
  slo_great_moravia_supreme_mission: "Long Live Great Moravia!"
  desc_slo_great_moravia_supreme_mission: ""
@@ -2934,8 +2935,8 @@
  fra_sanction_crusades_mission: "Deus Vult!"
  desc_fra_sanction_crusades_mission: ""
  fra_march_on_rome_opinion: "Sacked Our City"
- fra_march_on_rome_opinion2: "Sacked [2235.GetCapitalName]"
- fra_march_on_rome_opinion3: "Attacked [2235.GetCapitalName]"
+ fra_march_on_rome_opinion2: "Sacked Rome"
+ fra_march_on_rome_opinion3: "Attacked Rome"
 #DENMARK
  dan_dannebrog: "Dannebrog"
  desc_dan_dannebrog: ""
@@ -3010,11 +3011,11 @@
  nor_lumber_province: "Lumber Trade Boom"
  nor_whales_province: "Whaling Trade Boom"
 #DENMARK/NORWAY
- dan_nor_london_raid_strong: "[2268.GetCapitalName] Devastated"
+ dan_nor_london_raid_strong: "London Devastated"
  desc_dan_nor_london_raid_strong: ""
- dan_nor_london_raid_medium: "[2268.GetCapitalName] Raided"
+ dan_nor_london_raid_medium: "London Raided"
  desc_dan_nor_london_raid_medium: ""
- dan_nor_london_raid_weak: "[2268.GetCapitalName] Occupied"
+ dan_nor_london_raid_weak: "London Occupied"
  desc_dan_nor_london_raid_weak: ""
  dan_nor_london_raid_strong_country: "Divide the Spoils!"
  desc_dan_nor_london_raid_strong_country: ""
