@@ -1187,6 +1187,7 @@ vn_ase_missions_slot_5_b = {
 			}
         }
         effect = {
+            custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
                 limit = { 
                     development = 10
