@@ -419,6 +419,7 @@ vn_eng_missions_slot_1_c = {
 			}
         }
         effect = {
+            custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
                 limit = {
                     region = toulouse_region
@@ -1694,6 +1695,7 @@ vn_eng_missions_slot_4_b = {
             }
         }
         effect = {
+            custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
 				limit = {
 					superregion = irish_superregion
@@ -1816,6 +1818,7 @@ vn_eng_missions_slot_4_d = {
 			}
         }
         effect = {
+            custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
                 limit = {
                     superregion = british_isles_superregion
