@@ -818,6 +818,7 @@ vn_mlo_missions_slot_4_b = {
 			}
         }
         effect = {
+            custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
                 limit = { 
                     region = lombardy_region
