@@ -329,6 +329,7 @@ vn_nav_missions_slot_3_a = {
 			}
         }
         effect = {
+			custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
 				limit = { has_fort_trigger = yes }
 				add_base_manpower = 2
