@@ -424,6 +424,7 @@ vn_nor_missions_slot_2_d = {
 			naval_forcelimit = 10
         }
         effect = {
+			custom_tooltip = vn_will_receive_rewards_tt
 			random_owned_province = {
 				limit = { 
 					is_in_capital_area = yes 
@@ -883,6 +884,7 @@ vn_nor_missions_slot_4_b = {
 			}
         }
         effect = {
+			custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
 				limit = {
 					OR = {
