@@ -63,6 +63,7 @@ vn_por_missions_slot_1_a = {
             }
         }
         effect = {
+            custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
                 limit = { 
                     has_port = yes
@@ -361,6 +362,7 @@ vn_por_missions_slot_2_a = {
             }
         }
         effect = {
+            custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
                 limit = {
                     OR = {
@@ -494,6 +496,7 @@ vn_por_missions_slot_2_b = {
             }
         }
         effect = {
+            custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
                 limit = {
                     NOT = { has_fort_trigger = yes }
@@ -952,6 +955,7 @@ vn_por_missions_slot_3_b = {
 			}
         }
         effect = {
+            custom_tooltip = vn_will_receive_rewards_tt
             random_owned_province = {
 				limit = {
 					continent = africa
