@@ -256,6 +256,7 @@ vn_slz_missions_slot_3_a = {
 			}
         }
         effect = {
+			custom_tooltip = vn_will_receive_rewards_tt
 			random_owned_province = {
 				limit = { trade_goods = salt }
 				add_base_production = 2
