@@ -225,6 +225,7 @@ vn_swe_missions_slot_1_b = {
 			}
         }
         effect = {
+			custom_tooltip = vn_will_receive_rewards_tt
 			random_owned_province = {
 				limit = {
 					OR = {
