@@ -383,6 +383,7 @@ vn_gbr_missions_slot_3_a = {
 			}
         }
         effect = {
+			custom_tooltip = vn_will_receive_rewards_tt
             if = {
 				limit = {
 					has_dlc = "Rule Britannia"
@@ -788,6 +789,7 @@ vn_gbr_missions_slot_5_b = {
 			}
         }
         effect = {
+			custom_tooltip = vn_will_receive_rewards_tt
             if = {
 				limit = {
 					has_dlc = "Rule Britannia"
