@@ -3,11 +3,13 @@
 # Hotfix 1 #
 
 -Fixes for the following mission trees: Alania, Barcelona, Breton REL, Brandenburg, Karlings, Kiev, Volga Bulgaria, Luxembourg
+-Some missions that only display effects after fulfilling triggers now show an extra tooltip
+-Fixed non-working localization in some mission modifiers
 -Fixed a bunch of advisor icons not showing correctly
 -Changed Saxon stem duchy's country name
 -Fixed Roger II of Sicily's incorrect regnal number
 -Fixed Temples being given by a Dynastic event before tech 36
--Small localisation fixes
+-Other small localization fixes
 
 # v 2.0.0 #
 
